--- a/textprocessing.ipynb
+++ b/textprocessing.ipynb
@@ -6,7 +6,7 @@
       "name": "Copy of example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/hHGzTVll3Xfj+UJiqI58",
+      "authorship_tag": "ABX9TyPHJkYPq+G0LDAIriq6Mhy9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "yqtYmuQhwmwr",
-        "outputId": "616d4259-7d30-43cf-8bf0-5ae9d841213a",
+        "outputId": "9061f671-81dd-414c-94ee-541dc952b92e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -174,7 +174,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "c5JGV7Q6x1LE",
-        "outputId": "eb020156-103b-4a8a-c00b-d0a40b59f280",
+        "outputId": "a217224a-6eb3-485f-a2ff-2826fd699e7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -289,7 +289,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "s8vzRLB7zmjF",
-        "outputId": "9347a1aa-7fe7-4d4c-fea8-7fa492283476",
+        "outputId": "a0fdca3e-7918-427b-8fc8-ae04eb4c9410",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -304,7 +304,7 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 85510/85510 [00:56<00:00, 1515.15it/s]\n"
+            "100%|██████████| 85510/85510 [00:59<00:00, 1439.97it/s]\n"
           ],
           "name": "stderr"
         }
@@ -344,7 +344,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "_Y5SgEST0NnV",
-        "outputId": "3bd25f04-57ba-49ff-e038-8acfb16715b8",
+        "outputId": "c7f39a20-b17e-4aef-a509-a133a6582633",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -369,7 +369,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ikolvsVK0eUb",
-        "outputId": "ab294448-1350-40ea-b704-1dfe8a1d5b40",
+        "outputId": "05bed258-a281-4b83-e7e4-745fe96514b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -397,7 +397,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Phq6dgzNk986",
-        "outputId": "ab856aed-2019-4a52-c721-66a3921724ca",
+        "outputId": "43ac6ffc-b0f4-49f6-b904-5933f73295e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 359
@@ -538,7 +538,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CehHcU5RlM_0",
-        "outputId": "9793d437-2277-4f11-b34b-1a5b291d8822",
+        "outputId": "8bb28879-b563-4735-c0e5-0ee6144443a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -566,7 +566,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "gPSGJn3slkiX",
-        "outputId": "b2321ae5-2167-4671-9590-f3731180a94c",
+        "outputId": "468edafe-c468-46d2-b7a7-95d25ef02ecc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -595,7 +595,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "eucQIozTleCc",
-        "outputId": "d716129f-0749-4ae1-f560-1cea68aeffba",
+        "outputId": "dad098ee-34e7-401b-ccda-72b059aa3e4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -614,7 +614,7 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 242/242 [00:06<00:00, 40.22it/s]"
+            "100%|██████████| 242/242 [00:05<00:00, 41.47it/s]"
           ],
           "name": "stderr"
         },
@@ -638,7 +638,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "wy0d9JOIm6cx",
-        "outputId": "ed5ac829-d27e-4a5d-9c5c-b11b86eaab82",
+        "outputId": "732fd453-9e70-4c8b-f920-c303d496be23",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -657,7 +657,7 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 10000/10000 [00:00<00:00, 921987.16it/s]\n"
+            "100%|██████████| 10000/10000 [00:00<00:00, 1360682.56it/s]\n"
           ],
           "name": "stderr"
         }
@@ -667,7 +667,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "jqz0UxcYnC0X",
-        "outputId": "28950655-237d-4e31-b23b-e13fb80b9b05",
+        "outputId": "14c116de-67b4-497d-d7cd-690123de40ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -695,7 +695,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "w--py-9anqZA",
-        "outputId": "75c07098-3d19-47b1-d835-f5f5730c3636",
+        "outputId": "4078c144-b77f-4d50-f7b0-9c4f2b011e0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -723,7 +723,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "6hFX1BF_ng_4",
-        "outputId": "120725e6-afe5-4a18-c855-ad6cfe180b65",
+        "outputId": "d2af4268-c246-4cb3-fb99-9b77eef6ea0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -743,7 +743,7 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 10000/10000 [00:00<00:00, 1067117.16it/s]\n"
+            "100%|██████████| 10000/10000 [00:00<00:00, 690716.03it/s]\n"
           ],
           "name": "stderr"
         }
@@ -753,7 +753,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "g_50zI0doEPA",
-        "outputId": "0b422343-d2b3-4536-bed2-e15ae4543639",
+        "outputId": "26f64de3-2345-4123-9e66-679c37a6671e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -797,7 +797,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MlcbPLaooSng",
-        "outputId": "f2f302c6-4b99-44e7-9155-8f2e5288f405",
+        "outputId": "16e47151-350d-4153-d817-4e75dc4931f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -829,7 +829,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ebHMxjONovCy",
-        "outputId": "6bb6c8c5-0ec5-4caa-f4ae-3328dc8a8643",
+        "outputId": "5f277d05-bd78-4459-fc2d-1b2a184fadbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -858,7 +858,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "3Zwv8tPAozaX",
-        "outputId": "f4982b79-5738-4363-cbe7-9452884c13d1",
+        "outputId": "0b72b3f2-bf2a-47c0-f4e4-397c28e6e4d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -895,7 +895,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "nxWsfxgVqEeH",
-        "outputId": "d3a7ccb8-db71-4241-ded0-a4921f5ccb6a",
+        "outputId": "7eabd57c-a03e-455e-eb86-d825c40a809e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -923,7 +923,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "D__g4qkWqJ42",
-        "outputId": "acc2cada-87ae-4f61-a981-b6f15ebfaf37",
+        "outputId": "f726cd46-7655-4219-b898-5fde32bff793",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -951,7 +951,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "HLPVRVGdqbZO",
-        "outputId": "21f6f9ff-3ef7-45c9-bee8-b2dccee4c397",
+        "outputId": "6c64e9cf-a9d3-41b6-8a55-e8db615f0c93",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1000,7 +1000,7 @@
       "source": [
         "train_file=files_path.joinpath('test.h5')"
       ],
-      "execution_count": 40,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1012,7 +1012,88 @@
         "vid_train=np.array(vid_train)\n",
         "cap_train=np.array(cap_train)"
       ],
-      "execution_count": 131,
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n5Fg5HQTRy_c"
+      },
+      "source": [
+        "f=h5py.File(train_file,mode='a')"
+      ],
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Yq3L64C2KQh",
+        "outputId": "bcd15b5b-b9da-4b32-ec14-1f123ca9bab2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "f.keys()"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<KeysViewHDF5 ['train_dt', 'val_dt']>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vPR6O5g9SFD0",
+        "outputId": "b141f70d-79e9-4187-fe2b-0e920744957b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "grp1=f.create_group('train_dt',track_order=True)\n",
+        "grp1.create_dataset('train_vid',data=vid_train)\n",
+        "grp1.create_dataset('train_cap',data=cap_train)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<HDF5 dataset \"train_cap\": shape (8000, 35), type \"<i4\">"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dOpVE4gy3a-M"
+      },
+      "source": [
+        "#del cap_train\n",
+        "#del vid_train"
+      ],
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -1024,38 +1105,14 @@
         "vid_val=np.array(vid_val)\n",
         "cap_val=np.array(cap_val)"
       ],
-      "execution_count": 41,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "n5Fg5HQTRy_c"
-      },
-      "source": [
-        "f=h5py.File(train_file,mode='w')"
-      ],
-      "execution_count": 42,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vPR6O5g9SFD0"
-      },
-      "source": [
-        "grp1=f.create_group('train_dt',track_order=True)\n",
-        "grp1.create_dataset('train_vid',data=vid_train)\n",
-        "grp1.create_dataset('train_cap',data=cap_train)"
-      ],
-      "execution_count": 73,
+      "execution_count": 51,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LHeUd57wSWhg",
-        "outputId": "3976379c-936b-44ee-8712-70f9e649d0b3",
+        "outputId": "f5a4f93e-02c9-4942-b832-d14173829283",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1065,21 +1122,33 @@
         "grp2.create_dataset('val_vid',data=vid_val)\n",
         "grp2.create_dataset('val_cap',data=cap_val)"
       ],
-      "execution_count": 43,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<HDF5 dataset \"val_cap.dat\": shape (2000, 35), type \"<i4\">"
+              "<HDF5 dataset \"val_cap\": shape (2000, 35), type \"<i4\">"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 52
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IXa7A4C64B-k"
+      },
+      "source": [
+        "#del cap_val\n",
+        "#del vid_val"
+      ],
+      "execution_count": 55,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1089,8 +1158,17 @@
       "source": [
         "f.close()"
       ],
-      "execution_count": 46,
+      "execution_count": 54,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ztA7eBoe4yYf"
+      },
+      "source": [
+        "#End of code\n"
+      ]
     },
     {
       "cell_type": "code",
