--- a/model.ipynb
+++ b/model.ipynb
@@ -6,7 +6,7 @@
       "name": "model.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/X6mLSaY1afXSZ5d/DRYH",
+      "authorship_tag": "ABX9TyMgVTEmZxMa2HxMq42UgyHd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,14 +36,14 @@
         "from pathlib import Path\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "p-mIiG7if7KI",
-        "outputId": "1d95c13c-a526-45a9-cf47-e9edb05101d1",
+        "outputId": "6b15f357-7cdb-42eb-847b-248ccc32b413",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -51,7 +51,7 @@
       "source": [
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MhmuHrUBfsIq",
-        "outputId": "d2e556a2-4373-487d-ed04-d819ca555950",
+        "outputId": "60d930b6-e6b2-4be5-d4aa-af5d9924f57b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -75,7 +75,7 @@
         "drive_path=Path('/content/drive/My Drive')\n",
         "list(drive_path.glob('*'))"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -86,14 +86,50 @@
               " PosixPath('/content/drive/My Drive/video_corpus.csv'),\n",
               " PosixPath('/content/drive/My Drive/.ipynb_checkpoints'),\n",
               " PosixPath('/content/drive/My Drive/VideoArrays'),\n",
-              " PosixPath('/content/drive/My Drive/pickle_train.dat'),\n",
-              " PosixPath('/content/drive/My Drive/pickle_test.dat')]"
+              " PosixPath('/content/drive/My Drive/model1.h5'),\n",
+              " PosixPath('/content/drive/My Drive/splitdata'),\n",
+              " PosixPath('/content/drive/My Drive/splitset'),\n",
+              " PosixPath('/content/drive/My Drive/test.dat'),\n",
+              " PosixPath('/content/drive/My Drive/tokens_word_index.txt'),\n",
+              " PosixPath('/content/drive/My Drive/tokens_index_word.txt')]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qfj3Hbsc8dsj",
+        "outputId": "c0f725cb-3222-4b95-e710-9c37fbf07d91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "split_path=drive_path.joinpath('splitset')\n",
+        "list(split_path.glob('*'))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[PosixPath('/content/drive/My Drive/splitset/train.dat'),\n",
+              " PosixPath('/content/drive/My Drive/splitset/test.dat'),\n",
+              " PosixPath('/content/drive/My Drive/splitset/tokens_word_index.txt'),\n",
+              " PosixPath('/content/drive/My Drive/splitset/tokens_index_word.txt')]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
         }
       ]
     },
@@ -103,10 +139,10 @@
         "id": "D4DFcDBVgJjN"
       },
       "source": [
-        "train_file=drive_path.joinpath('pickle_train.dat')\n",
-        "val_file=drive_path.joinpath('pickle_test.dat')"
+        "train_file=split_path.joinpath('train.dat')\n",
+        "val_file=split_path.joinpath('test.dat')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -118,14 +154,14 @@
         "(vid_test, cap_test)=pickle.load(open( val_file, \"rb\" ))\n",
         "(vid_train, cap_train)=pickle.load(open( train_file, \"rb\" ))"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "q1fjJ4jJh8xV",
-        "outputId": "84f35185-fcc1-45c1-a864-e9eabda4b45b",
+        "outputId": "d7cc3383-cce1-4245-95f8-99c3ddd9a705",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -134,13 +170,13 @@
         "print(len(vid_train), vid_train[0].shape)\n",
         "print(len(vid_test), vid_test[0].shape)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "64639 (80, 4096)\n",
-            "16160 (80, 4096)\n"
+            "8000 (80, 4096)\n",
+            "2000 (80, 4096)\n"
           ],
           "name": "stdout"
         }
@@ -152,64 +188,23 @@
         "id": "4aseWEIYkO6u"
       },
       "source": [
-        "vid=np.array(vid_test[:500])\n",
-        "cap=np.array(cap_test[:500])"
+        "vid_train=np.array(vid_train)\n",
+        "cap_train=np.array(cap_train)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_6UYI3ARm-Uc",
-        "outputId": "b51b3bd4-4a72-40eb-d1c1-e2d3b5584bed",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "IfxudfOm9Nlh"
       },
       "source": [
-        "print(vid.ndim, vid.shape )\n",
-        "print(cap.ndim, cap.shape)"
+        "#vid_test=np.array(vid_test)\n",
+        "#cap_test=np.array(cap_test)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3 (500, 80, 4096)\n",
-            "2 (500, 89)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IeTD78TXy5OQ",
-        "outputId": "ccf848c4-103c-4c43-bc33-4d6c581ac118",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "vid.shape[1], vid.shape[2]"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(80, 4096)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -251,8 +246,68 @@
         "    # return all models\n",
         "    return model, encoder_model, decoder_model"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jwz87-p5_xBa",
+        "outputId": "f3e68f30-3451-436e-a756-96cdb6585af6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#split_path.joinpath('tokens_word_index.txt')\n",
+        "token=pickle.load(open(split_path.joinpath('tokens_word_index.txt'),\"rb\"))\n",
+        "len(token.items())"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3434"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kig2IfhK--t5",
+        "outputId": "65998334-d53f-4e58-c8dc-c3b103cb3865",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "cap_train.shape[1]\n",
+        "vid_train.shape[2]\n",
+        "cap_train.shape[1]"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8000, 35)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -260,11 +315,11 @@
         "id": "yZCNXTxO8TIF"
       },
       "source": [
-        "vocab_size=11161\n",
-        "dim_embedding=64\n",
-        "maxlen=80"
+        "vocab_size=len(token.items())+1\n",
+        "#dim_embedding=64\n",
+        "maxlen=cap_train.shape[1]"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -273,16 +328,16 @@
         "id": "hLrUkyMtP9eB"
       },
       "source": [
-        "model, enc, dec = basic_enc_dec(4096, vocab_size, maxlen)"
+        "model, enc, dec = basic_enc_dec(vid_train.shape[2], vocab_size, maxlen)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ONBT2OObRweP",
-        "outputId": "aba14fa1-3ccd-496b-89e5-464ce02537bf",
+        "outputId": "380a7204-cfbd-4141-dab7-fe3450edb143",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -290,7 +345,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,18 +356,18 @@
             "==================================================================================================\n",
             "input_1 (InputLayer)            [(None, None, 4096)] 0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "input_2 (InputLayer)            [(None, None, 11161) 0                                            \n",
+            "input_2 (InputLayer)            [(None, None, 3435)] 0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "lstm (LSTM)                     [(None, 80), (None,  1336640     input_1[0][0]                    \n",
+            "lstm (LSTM)                     [(None, 35), (None,  578480      input_1[0][0]                    \n",
             "__________________________________________________________________________________________________\n",
-            "lstm_1 (LSTM)                   [(None, None, 80), ( 3597440     input_2[0][0]                    \n",
+            "lstm_1 (LSTM)                   [(None, None, 35), ( 485940      input_2[0][0]                    \n",
             "                                                                 lstm[0][1]                       \n",
             "                                                                 lstm[0][2]                       \n",
             "__________________________________________________________________________________________________\n",
-            "dense (Dense)                   (None, None, 11161)  904041      lstm_1[0][0]                     \n",
+            "dense (Dense)                   (None, None, 3435)   123660      lstm_1[0][0]                     \n",
             "==================================================================================================\n",
-            "Total params: 5,838,121\n",
-            "Trainable params: 5,838,121\n",
+            "Total params: 1,188,080\n",
+            "Trainable params: 1,188,080\n",
             "Non-trainable params: 0\n",
             "__________________________________________________________________________________________________\n"
           ],
@@ -323,77 +378,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LDNZaKWcT0YC",
-        "outputId": "ac72f3ff-1e66-4dce-cc58-1e4d8d4f4938",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "cap"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([  2,  25,   4, 469, 528,   3,   0,   0,   0,   0,   0,   0,   0,\n",
-              "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-              "         0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0], dtype=int32)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "XwjlpmOmUPd2"
       },
       "source": [
-        "\n",
-        "x2 = np.hstack([np.zeros((500, 1)), np.array(cap)])\n",
+        "x2 = np.hstack([np.zeros((cap_train.shape[0], 1)), np.array(cap_train)])\n",
         "x2 = x2[:, :-1]"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HqjYxJffU9v2",
-        "outputId": "519ab0f0-ff1f-4e8c-a7a0-ec38b1a49c08",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "HqjYxJffU9v2"
       },
       "source": [
-        "#Convert to 1652x42x1000\n",
+        "#Convert to (no of captions)x(no of words)x(vocab size)\n",
         "from keras.utils.np_utils import to_categorical   \n",
         "\n",
-        "x2_in = to_categorical(x2, num_classes = vocab_size)\n",
-        "outputs = to_categorical(cap, num_classes = vocab_size)\n",
-        "print(x2_in.shape, outputs.shape)"
+        "#x2_in = to_categorical(x2, num_classes = vocab_size)\n",
+        "x2 = to_categorical(x2, num_classes = vocab_size)\n",
+        "outputs = to_categorical(cap_train, num_classes = vocab_size)\n",
+        "#print(x2_in.shape, outputs.shape)\n",
+        "print(x2.shape, outputs.shape)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(500, 89, 11161) (500, 89, 11161)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
