--- a/example.ipynb
+++ b/example.ipynb
@@ -6,7 +6,7 @@
       "name": "example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOUOQRnQGGYYEweLs9efTfl",
+      "authorship_tag": "ABX9TyOHp2FNXdHmUb+5gMU6N+QD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "yqtYmuQhwmwr",
-        "outputId": "fecbc181-8cec-4af1-817f-30dbc29791cc",
+        "outputId": "f36069c2-854b-4692-a275-bc7690318ae0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -162,7 +162,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "c5JGV7Q6x1LE",
-        "outputId": "75dc403c-4d38-445a-a4db-bac605ba172e",
+        "outputId": "f9b0ebfe-697d-41ab-82bf-28b534cc3752",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -277,7 +277,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "s8vzRLB7zmjF",
-        "outputId": "3bbda803-3ed2-4e78-99d6-4ac31ea7af7c",
+        "outputId": "46699ee4-db4c-4922-dc61-6e7e351a1b43",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -292,7 +292,7 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 85510/85510 [00:50<00:00, 1690.43it/s]\n"
+            "100%|██████████| 85510/85510 [00:54<00:00, 1569.17it/s]\n"
           ],
           "name": "stderr"
         }
@@ -332,7 +332,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "_Y5SgEST0NnV",
-        "outputId": "32faeb8c-97c1-4a14-c6ae-ac9b35fdf67f",
+        "outputId": "65ba374a-03df-48c5-acee-831ef9affda6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -357,7 +357,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ikolvsVK0eUb",
-        "outputId": "d73b9802-fa76-4920-b522-5e8036e2e16b",
+        "outputId": "2796b922-2024-49e7-aa24-3d4940dd1ef5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -394,7 +394,7 @@
       "source": [
         "annotations[:10]"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,12 +514,23 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "s3X7p_YJG6Ig"
+      },
+      "source": [
+        "annotations.to_csv(drive_path.joinpath('processed.csv'),index=False)"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "IxNdHDzU0kBJ"
       },
       "source": [
         "annotations_0=annotations[:20000]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -534,7 +545,7 @@
       "source": [
         "annotations_0.shape"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +574,7 @@
         "video_paths=np.unique(annotations_0.VideoPath)\n",
         "len(video_paths)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +608,7 @@
         "video_np=load_videos_as_numpy(video_paths)\n",
         "print(len(video_np))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +651,7 @@
         "  return total_captions\n",
         "total_captions=preprocess_captions(annotations_0)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +674,7 @@
       "source": [
         "annotations_0['captions']=total_captions"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +702,7 @@
       "source": [
         "annotations_0.shape"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -726,7 +737,7 @@
         "\n",
         "total_captions = annotations_0[\"captions\"].iloc[keepindex].values"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,7 +769,7 @@
         "vocab_size = len(tokenizer.word_index) + 1\n",
         "print('Vocabulary Size: %d' % vocab_size)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,7 +789,7 @@
         "# integer encode descriptions\n",
         "sequences = tokenizer.texts_to_sequences(total_captions)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,7 +808,7 @@
         "cap_vector = pad_sequences(sequences, padding='post')\n",
         "cap_vector[0].shape"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +837,7 @@
         "max_len=len(cap_vector[0])\n",
         "max_len"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +872,7 @@
         "print('first caption padding vector ', cap_vector[0].shape)\n",
         "print('Max len of single padding vector or number of rows ', max_len)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,7 +902,7 @@
       "source": [
         "len(videos_dt), videos_dt[0].shape, videos_dt[0].ndim"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +930,7 @@
       "source": [
         "len(cap_vector), cap_vector[0].shape, cap_vector[0].ndim"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -952,7 +963,7 @@
         "len(vid_train), len(cap_train), len(vid_val), len(cap_val)\n",
         "# Feel free to change these parameters according to your system's configuration"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -978,7 +989,7 @@
         "pickle.dump((vid_train, cap_train),outfile)\n",
         "outfile.close()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -991,7 +1002,7 @@
         "pickle.dump((vid_val, cap_val),outfile)\n",
         "outfile.close()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1004,7 +1015,7 @@
         "pickle.dump(tokenizer.word_index,outfile)\n",
         "outfile.close()"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1017,7 +1028,7 @@
         "pickle.dump(tokenizer.index_word,outfile)\n",
         "outfile.close()"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     }
   ]
